[tool.poetry]
name = "asanafs"
version = "0.1.0"
description = ""
authors = ["eli <eli@localhost>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asana = "^3.2.1"
pyyaml = "^6.0"
trio = "^0.22.2"
pyfuse3 = "^3.2.3"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.4.0"
pytest-trio = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
trio_mode = true
pythonpath = [".", "asanafs"]
log_level = "DEBUG"